--- a/myexample.html
+++ b/myexample.html
@@ -11,7 +11,7 @@
     
     <!--Code for video-->
     <video controls width="750">
-    <source src="first_ae/main_composition.mp4" type="video/mp4">
+    <source src="main_composition.mp4" type="video/mp4">
     Sorry, your browser doesn't support embedded videos.
     </video>
     
